# korea_investment_rs

./: .gitignore  Cargo.toml  README.md
docs/: api-roadmap.md  examples.md
examples/: create_token.rs  get_inquire_daily_itemchartprice.rs  get_stock_price.rs  test.rs  test2.rs  test3.rs
examples/bond/: get_bond_price.rs
examples/domestic/: get_balance.rs  get_balance_realized_pl.rs  get_condition_search_titles.rs  get_credit_possible_order.rs  get_domestic_volume_rank.rs  get_inquire_daily_itemchartprice.rs  get_inquire_index_price.rs  get_inquire_period_price.rs  get_inquire_price2.rs  get_integrated_margin.rs  get_minutes_by_day.rs  get_orderbook.rs  get_pension_balance.rs  get_period_rights.rs  get_period_trade_profit.rs  get_reserve_orders.rs  get_stock_price.rs  get_today_minutes.rs
examples/futures/: get_future_balance.rs  get_future_ccld.rs  get_future_possible_order.rs  get_future_price.rs  get_overseas_future_price.rs
examples/oauth/: create_token.rs
examples/overseas/: get_overseas_asking_price.rs  get_overseas_balance.rs  get_overseas_daily_chartprice.rs  get_overseas_daily_price.rs  get_overseas_index_minutes.rs  get_overseas_minutes_by_day.rs  get_overseas_news_title.rs  get_overseas_period_profit.rs  get_overseas_present_balance.rs  get_overseas_price.rs  get_overseas_product_info.rs  get_overseas_reserve_orders.rs  get_overseas_today_minutes.rs  get_overseas_trade_volume_rank.rs  place_overseas_daytime_order.rs
examples/provider/: create_provider.rs
examples/socket/: creat_approval_key.rs  domestic_future_realtime.rs  domestic_raw_realtime.rs  overseas_future_realtime.rs  real_time_delayed_execution_price.rs
scripts/: extract_kis_api_inventory.py
src/: lib.rs
src/bond/: mod.rs
src/domestic/: mod.rs
src/domestic/analysis/: mod.rs
src/domestic/quotations/: mod.rs
src/domestic/trading/: mod.rs
src/futures/: mod.rs
src/oauth/: oauth.rs
src/overseas/: mod.rs
src/provider/: mod.rs
src/types/: mod.rs
src/utils/: mod.rs
src/websocket/: mod.rs
src/websocket/domestic/: mod.rs
src/websocket/oauth/: oauth.rs
src/websocket/overseas/: mod.rs  models.rs  types.rs
