[package]
name = "korea_investment_rs"
version = "0.1.6"
edition = "2024"
description = "Korea Investment & Securities Open API"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
async-trait = "0.1.89"


[dependencies.dotenv]
version = "0.15.0"
optional = true


[features]
ex = ["dotenv"]



[[example]]
name = "test"
path = "./examples/test.rs"
